--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -307,6 +307,7 @@
                 <div class="col-md-9 col-sm-9 col-xs-12">
                   <div id="placeholder33" style="height: 260px; display: none" class="demo-placeholder"></div>
                   <div style="width: 100%;">
+                    <!-- <div id="canvas_dahs" class="demo-placeholder" style="width: 100%; height:270px;"></div> -->
                     <div id="canvas_dahs" class="demo-placeholder" style="width: 100%; height:270px;"></div>
                   </div>
                 </div>
@@ -368,7 +369,7 @@
             <div class="col-md-4 col-sm-4 col-xs-12">
               <div class="x_panel tile fixed_height_320">
                 <div class="x_title">
-                  <h2>App Versions</h2>
+                  <h2>Exercise</h2>
                   <ul class="nav navbar-right panel_toolbox">
                     <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                     </li>
@@ -477,7 +478,7 @@
             <div class="col-md-4 col-sm-4 col-xs-12">
               <div class="x_panel tile fixed_height_320 overflow_hidden">
                 <div class="x_title">
-                  <h2>Device Usage</h2>
+                  <h2>Food</h2>
                   <ul class="nav navbar-right panel_toolbox">
                     <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                     </li>
@@ -558,7 +559,7 @@
             <div class="col-md-4 col-sm-4 col-xs-12">
               <div class="x_panel tile fixed_height_320">
                 <div class="x_title">
-                  <h2>Quick Settings</h2>
+                  <h2>Weather</h2>
                   <ul class="nav navbar-right panel_toolbox">
                     <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                     </li>
@@ -610,6 +611,7 @@
           </div>
 
 
+<!-- 
           <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-12">
               <div class="x_panel">
@@ -766,7 +768,7 @@
               <div class="row">
 
 
-                <!-- Start to do list -->
+                Start to do list
                 <div class="col-md-6 col-sm-6 col-xs-12">
                   <div class="x_panel">
                     <div class="x_title">
@@ -833,9 +835,9 @@
                     </div>
                   </div>
                 </div>
-                <!-- End to do list -->
+                End to do list
                 
-                <!-- start of weather widget -->
+                start of weather widget
                 <div class="col-md-6 col-sm-6 col-xs-12">
                   <div class="x_panel">
                     <div class="x_title">
@@ -941,11 +943,11 @@
                   </div>
 
                 </div>
-                <!-- end of weather widget -->
+                end of weather widget
               </div>
             </div>
           </div>
-        
+    -->     
         
           <!-- bottom tiles -->
           <div class="row tile_count">
