--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,9 +1,9 @@
 {% extends "admin/base.html" %}
 
-{% block title %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
+{% block title %}{{ title }} | {{ site_title|default:_('Dyraid Admin') }}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name"><a href="{% url 'admin:index' %}">Dyraid Home</a></h1>
+<h1 id="site-name"><a href="{% url 'admin:index' %}">{{ site_header|default:_('Dyraid') }}</a></h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
