landmark added create user

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -740,6 +740,7 @@
 
 {% endblock %}
 
+{% block logout_url %}<a href="{% url 'admin:logout' %}"><i class="fa fa-sign-out pull-right"></i> {% trans 'Log out' %}</a>{% endblock %}
 {% block sidebar %}
 <div id="content-related">
     <div class="module" id="recent-actions-module">
