--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -697,6 +697,7 @@
 
 {% endblock %}
 
+{% block logout_url %}<a href="{% url 'home:logout' %}"><i class="fa fa-sign-out pull-right"></i> {% trans 'Log out' %}</a>{% endblock %}
 {% block sidebar %}
 <div id="content-related">
     <div class="module" id="recent-actions-module">
