--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -54,7 +54,8 @@
     <div class="main_container">
     	{% if not is_popup %}
         {% block usertools %}
-        {% if has_permission %}
+        {% comment %}{% if has_permission %}{% endif %}{% endcomment %} <!-- permission line for superuser -->
+        {% if user.is_authenticated %}
         
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
@@ -243,7 +244,7 @@
 	                {% if user.has_usable_password %}
                     	<li><a href="{% url 'admin:password_change' %}""><i class="fa pull-right"></i> {% trans 'Change password' %}</a></li>
                     {% endif %}
-                    <li><a href="{% url 'admin:logout' %}"><i class="fa fa-sign-out pull-right"></i> {% trans 'Log out' %}</a></li>
+                    <li>{% block logout_url %}{% endblock %}</li>
                   </ul>
                 </li>
 
@@ -293,7 +294,7 @@
           </div>
         </div>
         <!-- /top navigation -->
-        
+                      
         {% endif %}
         {% endblock %}
 		{% endif %}
