--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -57,12 +57,11 @@
         {% comment %}{% if has_permission %}{% endif %}{% endcomment %} <!-- permission line for superuser -->
         {% if user.is_authenticated %}
         
+        {% block left_navigation %}
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="{% url 'admin:index' %}" class="site_title">
-              	{% block content_title %}{% if title %}<i class="fa fa-paw"></i> <span>{{ title }}</span>{% endif %}{% endblock %}
-              </a>
+              {% block index_page %}{% endblock %}
             </div>
 
             <div class="clearfix"></div>
@@ -203,8 +202,10 @@
             <!-- /menu footer buttons -->
           </div>
         </div>
+	    {% endblock %}
 	    
         <!-- top navigation -->
+        {% block top_navigation %}
         <div class="top_nav">
           <div class="nav_menu">
             <nav class="" role="navigation">
@@ -242,7 +243,7 @@
                     </li>
                     <li><a href="javascript:;">Help</a></li>
 	                {% if user.has_usable_password %}
-                    	<li><a href="{% url 'admin:password_change' %}""><i class="fa pull-right"></i> {% trans 'Change password' %}</a></li>
+                    	<li>{% block change_password_url %}{% endblock %}</li>
                     {% endif %}
                     <li>{% block logout_url %}{% endblock %}</li>
                   </ul>
@@ -293,6 +294,7 @@
             </nav>
           </div>
         </div>
+        {% endblock %}
         <!-- /top navigation -->
                       
         {% endif %}
@@ -300,13 +302,20 @@
 		{% endif %}
 		
   	</div>
-    	
+    	    	
+	<div class="right_col {% block coltype %}colM{% endblock %}" role="main">	
+	
+        {% block content_title %}{% if title %}<i class="fa fa-paw"></i> <span>{{ title }}</span>{% endif %}{% endblock %}
+        
         <!-- page content -- For index, check index.html-->       	
 	    {% block content %}
 	    {% block object-tools %}{% endblock %}
 		{{ content }}
        	{% endblock %}
+        {% block sidebar %}{% endblock %}
+	        <br class="clear" />
        	<!-- /page content -->
+       	       	
 
         <!-- footer content -->
         <footer>
@@ -316,6 +325,7 @@
           <div class="clearfix"></div>
         </footer>
         <!-- /footer content -->
+   </div>
 </div>   
 
     <!-- jQuery -->
