--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -4,5 +4,5 @@
 {% block title %}{% trans "Logged out" %}{% endblock %}
 
 {% block content %}
-<p>{% trans "Successfully logged out" %}.</p>
+<p>{% trans "Successfully logged out" %}. <a href="{% url 'auth_login' %}">Log in again?</a></p>
 {% endblock %}
