--- a/templates/admin/change_form.html
+++ b/templates/admin/change_form.html
@@ -65,6 +65,7 @@
 
 {% block after_related_objects %}{% endblock %}
 
+{% block submit_buttons_bottom %}{% submit_row %}{% endblock %}
 
 {% block admin_change_form_document_ready %}
     <script type="text/javascript"
