--- a/home/templates/home/meal_detail.html
+++ b/home/templates/home/meal_detail.html
@@ -1,7 +1,15 @@
+{% extends "home/index.html" %}
+{% load i18n static %}
+
+{% block content %}
+<div id="content-main">
 <h1>Meal</h1>
 <p>Name: {{ meal.food_name }}</p>
 <p>Type: {{ meal.food_type }}</p>
 <p>Calories: {{ meal.calories }}</p>
 
- <a href="{% url "home:meal_update" meal.id %}">edit</a> |  <a href="{% url "home:meal_delete" meal.id %}">delete</a>
+ <a href="{% url "home:meal_update" meal.id %}">Edit</a> |  <a href="{% url "home:meal_delete" meal.id %}">Delete</a> |
  <a href="{% url "home:meal_list" %}">Back To List</a>
+
+</div>
+{% endblock %}
