--- a/home/templates/home/meal_list.html
+++ b/home/templates/home/meal_list.html
@@ -1,22 +1,15 @@
-<!-- <h1>Meals</h1>
-<ul>
-    {% for meal in object %}
-    <li>{{ meal.id }} - {{ meal.food_name }}  :  
-    <a href="{% url "home:meal_update" meal.id %}">edit</a>
-    <a href="{% url "home:meal_delete" meal.id %}">delete</a>
-    </li>
-    {% endfor %}
-</ul>
+{% extends "home/index.html" %}
+{% load i18n static %}
 
-<a href="{% url "home:meal_create" %}">New</a> -->
-
+{% block content %}
+<div id="content-main">
 <h1>Meals</h1>
 {% if meal_list %}
     <ul>
     {% for meal in meal_list %}
-        <li>{{ meal.id }} - {{ meal.food_name }}  :  
-		    <a href="{% url "home:meal_detail" meal.id %}">view</a>
-		    <a href="{% url "home:meal_update" meal.id %}">edit</a>
+        <li> {{ meal.food_name }}  :  
+		    <a href="{% url "home:meal_detail" meal.id %}">view</a> |
+		    <a href="{% url "home:meal_update" meal.id %}">edit</a> |
 		    <a href="{% url "home:meal_delete" meal.id %}">delete</a>
 	    </li>
     {% endfor %}
@@ -25,3 +18,6 @@
     <p>No meals are available.</p>
 {% endif %}
 <a href="{% url "home:meal_create" %}">New</a> 
+
+</div>
+{% endblock %}
