--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -775,9 +775,10 @@
        
 {% endblock %}
 
-{% block index_page %}<a href="{% url 'admin:index' %}" class="site_title"><i class="fa fa-paw"></i> <span> Home </span></a>{% endblock %}
+{% block index_page %}<a href="{% url 'admin:index' %}" class="site_title"><i class="fa fa-home"></i> <span> Home </span></a>{% endblock %}
+
 {% block change_password_url %}<a href="{% url 'admin:password_change' %}"><i class="fa pull-right"></i> {% trans 'Change password' %}</a>{% endblock %}
-{% block logout_url %}<a href="{% url 'admin:logout' %}"><i class="fa fa-sign-out pull-right"></i> {% trans 'Log out' %}</a>{% endblock %}
+{% block logout_url %}<a href="{% url 'admin:logout' %}">{% trans 'Log out' %}</a>{% endblock %}
 
 {% block sidebar %}
 <div><!--  </div><div id="content-related">-->
