--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -12,7 +12,8 @@
 {% block title %}{{ title }}{% endblock %}
 {% block content_title %}<h1>{{ title }}</h1>{% endblock %}
 
-{% block content %}<div id="content-main">
+{% block content %}
+<div id="content-main">
 
 <form method="post">{% csrf_token %}
 <div>
