--- a/home/templates/home/userlog_list.html
+++ b/home/templates/home/userlog_list.html
@@ -7,7 +7,7 @@
 {% if userlog_list %}
     <ul>
     {% for userlog in userlog_list %}
-        <li> {{ userlog.id }}  :  
+        <li> {{ userlog }}  :  
 		    <a href="{% url "home:userlog_detail" userlog.id %}">view</a> |
 		    <a href="{% url "home:userlog_update" userlog.id %}">edit</a> |
 		    <a href="{% url "home:userlog_delete" userlog.id %}">delete</a>
