--- a/home/templates/home/meal_list.html
+++ b/home/templates/home/meal_list.html
@@ -5,19 +5,60 @@
 <div id="content-main">
 <h1>Meals</h1>
 {% if meal_list %}
-    <ul>
-    {% for meal in meal_list %}
-        <li> {{ meal.food_name }}  :  
-		    <a href="{% url "home:meal_detail" meal.id %}">view</a> |
-		    <a href="{% url "home:meal_update" meal.id %}">edit</a> |
-		    <a href="{% url "home:meal_delete" meal.id %}">delete</a>
-	    </li>
+	<table class="table table-bordered">
+	  <thead>
+	    <tr>
+	      <th>Name</th>
+	      <th>Type</th>
+	      <th>Calories</th>
+	      <th></th>
+	    </tr>
+	  </thead>
+	  <tbody>
+	    {% for meal in meal_list %}
+	      <tr>
+	        <td>{{ meal.food_name }}</td>
+	        <td>{{ meal.food_type }}</td>
+	        <td>{{ meal.calories }}</td>
+	        <td>
+			    <a href="{% url "home:meal_detail" meal.id %}">view</a> |
+			    <a href="{% url "home:meal_update" meal.id %}">edit</a> |
+			    <a href="{% url "home:meal_delete" meal.id %}">delete</a>
+			</td>
+	      </tr>
+	    {% endfor %}
+	  </tbody>
+	</table>
+{% if is_paginated %}
+  <ul class="pagination">
+    {% if page_obj.has_previous %}
+      <li><a href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>
+    {% else %}
+      <li class="disabled"><span>&laquo;</span></li>
+    {% endif %}
+    {% for i in paginator.page_range %}
+      {% if page_obj.number == i %}
+        <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+      {% else %}
+        <li><a href="?page={{ i }}">{{ i }}</a></li>
+      {% endif %}
     {% endfor %}
-    </ul>
+    {% if page_obj.has_next %}
+      <li><a href="?page={{ page_obj.next_page_number }}">&raquo;</a></li>
+    {% else %}
+      <li class="disabled"><span>&raquo;</span></li>
+    {% endif %}
+  </ul>
+{% endif %}
+	
 {% else %}
     <p>No meals are available.</p>
 {% endif %}
 <a href="{% url "home:meal_create" %}">New</a> 
 
 </div>
+
 {% endblock %}
+
+
+
