--- a/userlog/templates/userlog/userlog_detail.html
+++ b/userlog/templates/userlog/userlog_detail.html
@@ -8,8 +8,8 @@
 <p>Time: {{ userlog.log_time }}</p>
 <p>Comment: {{ userlog.comment }}</p>
 
- <a href="{% url "home:userlog_update" userlog.id %}">Edit</a> |  <a href="{% url "home:userlog_delete" userlog.id %}">Delete</a> |
- <a href="{% url "home:userlog_list" %}">Back To List</a>
+ <a href="{% url "userlog:userlog_update" userlog.id %}">Edit</a> |  <a href="{% url "userlog:userlog_delete" userlog.id %}">Delete</a> |
+ <a href="{% url "userlog:userlog_list" %}">Back To List</a>
 
 </div>
 {% endblock %}
