--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -64,6 +64,6 @@
 
 </div>
 <div>
-<a href="{% url 'registration_register' %}">Sign Up</a>
+<a href="{% url 'account_signup' %}">Sign Up</a>
 </div>
 {% endblock %}
