--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -597,8 +597,8 @@
 {% block env_page %}<a href="{% url 'home:meal_list' %}"><i class="fa fa-location-arrow"></i> <span> Environment </span></a>{% endblock %}
 {% block userlog_page %}<a href="{% url 'userlog:userlog_list' %}"><i class="fa fa-book"></i> <span> Logs </span></a>{% endblock %}
 
-{% block change_password_url %}<a href="{% url 'auth_password_change' %}"><i class="fa pull-right"></i> {% trans 'Change password' %}</a>{% endblock %}
-{% block logout_url %}<a href="{% url 'auth_logout' %}"><i class="fa fa-sign-out pull-right"></i> {% trans 'Log out' %}</a>{% endblock %}
+{% block change_password_url %}<a href="{% url 'account_change_password' %}"><i class="fa pull-right"></i> {% trans 'Change password' %}</a>{% endblock %}
+{% block logout_url %}<a href="{% url 'account_logout' %}"><i class="fa fa-sign-out pull-right"></i> {% trans 'Log out' %}</a>{% endblock %}
 
 {% comment %}{% block logout_url %}<a href="{% url 'home:logout' %}"><i class="fa fa-sign-out pull-right"></i> {% trans 'Log out' %}</a>{% endblock %}{% endcomment %}
 
