completed meal separation

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -262,7 +262,7 @@
 
     <!-- Custom Theme Scripts -->
     <script src="{% static 'home/gentelella/build/js/custom.min.js' %}"></script>
-    <script src="{% static 'home/overrides/build/js/custom.js' %}"></script>
+    <!-- <script src="{% static 'home/overrides/build/js/custom.js' %}"></script> -->
     
     {% block extrascripts %}{% endblock %}
 
