--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -287,6 +287,8 @@
 {% block exercise_page %}<a href="{% url 'home:index' %}"><i class="fa fa-bicycle"></i> <span> Exercise </span></a>{% endblock %}
 {% block userlog_page %}<a href="{% url 'userlog:userlog_list' %}"><i class="fa fa-book"></i> <span> Logs </span></a>{% endblock %}
 
+{% block view_profile %}<a href="{% url 'home:userprofile_detail' %}"><i class="fa pull-right"></i> {% trans 'Profile' %}</a>{% endblock %}
+
 {% block change_password_url %}<a href="{% url 'account_change_password' %}"><i class="fa pull-right"></i> {% trans 'Change password' %}</a>{% endblock %}
 {% block logout_url %}<a href="{% url 'account_logout' %}"><i class="fa fa-sign-out pull-right"></i> {% trans 'Log out' %}</a>{% endblock %}
 
