user type and sex

--- a/home/templates/home/userprofile_detail.html
+++ b/home/templates/home/userprofile_detail.html
@@ -4,6 +4,9 @@
 {% block content %}
 <div id="content-main">
 <h1>User Profile</h1>
+<p>DOB: {{ userprofile.date_of_birth }}</p>
+<p>Sex: {{ userprofile.sex_type }}</p>
+<p>Type: {{ userprofile.user_type }}</p>
 <p>Comment: {{ userprofile.check_comment }}</p>
 
 </div>
